@@ -58,6 +58,9 @@ namespace PDH {
 		void setListener(listener_ptr listener) {
 			listener_ = listener;
 		}
+		PDH::PDHError validate() {
+			return PDH::PDHFactory::get_impl()->PdhValidatePath(name_.c_str(), false);
+		}
 
 		PDHCounterInfo getCounterInfo(BOOL bExplainText = FALSE) {
 			if (hCounter_ == NULL)
@@ -108,6 +111,10 @@ namespace PDH {
 				return;
 			DWORD format = listener_->getFormat();
 			PDH::PDHError status = PDH::PDHFactory::get_impl()->PdhGetFormattedCounterValue(hCounter_, format, NULL, &data_);
+			if (status.is_negative_denominator()) {
+				Sleep(500);
+				status = PDH::PDHFactory::get_impl()->PdhGetFormattedCounterValue(hCounter_, format, NULL, &data_);
+			}
 			if (status.is_error()) {
 				throw PDHException(name_, _T("PdhGetFormattedCounterValue failed {format: ") + strEx::itos(format) + _T("}"), status);
 			}
