@@ -7,6 +7,7 @@ TODO:
 2012-05-07 MickeM
  * Fixed parsin of empty sections (CheckExternalScripts) - #524
  * Fixed so duplicate command are not created when both sections and shorthands are used (CheckExternalScripts)
+ * Added a test to see if I can resolve the negative denominator issue.
 
 2012-05-03 MickeM
  * Fixed issue with parsing size-type (usch as MinCritFree=10G)
